<resources>
    <string name="app_name">Yoga Academy</string>
    <!-- Course labels -->
    <string name="page_title">Course Details</string>
    <string name="day_of_week">Day of the Week:</string>
    <string name="time_of_course">Time of Course:</string>
    <string name="capacity">Capacity:</string>
    <string name="duration">Duration (Minutes):</string>
    <string name="price_per_class">Price per Class (£):</string>
    <string name="yoga_type">Yoga Type:</string>
    <string name="description">Description (Optional):</string>
    <!-- Days of Week -->
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- Days of Week -->
    <string-array name="type_of_yoga">
        <item>Aerial Yoga</item>
        <item>Family Yoga</item>
        <item>Flow Yoga</item>
    </string-array>
    <!-- Yoga Class labels -->
    <string name="class_title">Class Details</string>
    <string name="yoga_teacher">Teacher Name:</string>
    <string name="comments">Comments (Optional):</string>
    <string-array name="time_slots">
        <item>No Slots Available</item>
    </string-array>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_time_slots_available">No slots available for the selected day and type of yoga</string>
    <string name="url">https://stuiis.cms.gre.ac.uk/COMP1424CoreWS/comp1424cw/SubmitClasses</string>

</resources>