<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCourse">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/homeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:onClick="navigateToHome"
                android:contentDescription="Home Button"

                android:padding="8dp"
                android:src="@drawable/home_icon" />

            <!-- Application Name Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="12dp"
                android:padding="6dp"
                android:text="@string/app_name"
                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Title Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="12dp"
                android:padding="6dp"
                android:text="@string/page_title"
                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Day Of the Week -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/day_of_week"

                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/dayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:entries="@array/days_of_week"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:enabled="false"/>

            <!-- Start Time of Course -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/time_of_course"

                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/timeOfCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:enabled="false"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Capacity -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/capacity"
                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <!-- Duration -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/duration"
                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <!-- Price per Class -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/price_per_class"
                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pricePerClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <!-- Type of Yoga Class -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/yoga_type"

                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/typeOfClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:entries="@array/type_of_yoga"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:enabled="false"/>

            <!-- Description of Class -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/description"
                android:textColor="@color/customTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="Submit" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                android:visibility="gone" />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>