<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    tools:context=".MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/home_icon"
            android:clickable="true"
            android:onClick="navigateToHome"
            />

        <!-- View Application Name Label -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="12dp"
            android:padding="6dp"
            android:text="@string/app_name"
            android:textColor="#359c5e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- View Title Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="12dp"
            android:padding="6dp"
            android:text="@string/page_title"
            android:textColor="#359c5e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Day Of the Week -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/day_of_week"
            android:textColor="#359c5e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/dayOfWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:entries="@array/days_of_week"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal" >

            <!-- Start Time of Course -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/start_time_of_course"
                android:textColor="#359c5e"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/startTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="Start Time"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/end_time_of_course"
                android:textColor="#359c5e"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/endTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startTime"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="End Time"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <!-- Capacity -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/capacity"
            android:textColor="#359c5e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Capacity"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <!-- Duration -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/duration"
            android:textColor="#359c5e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Duration"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <!-- Price per Class -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/price_per_class"
            android:textColor="#359c5e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pricePerClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Price Per Class"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <!-- Type of Yoga Class -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/yoga_type"
            android:textColor="#359c5e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/typeOfClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:entries="@array/type_of_yoga"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <!-- Description of Class -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/description"
            android:textColor="#359c5e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/description"
            android:layout_centerHorizontal="true"
            android:text="Submit" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
